Fixed caption on mobile

--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ main {
     background: none;
     font-family: 'Cutive Mono', monospace;
     font-weight: 100;
-    padding-bottom: 50px;
+    padding-bottom: 120px;
     max-width: 600px;
     margin: auto;
 }
@@ -102,6 +102,10 @@ main {
         width: calc(33% - 20px);
     }
 
+    .lg-sub-html {
+        padding-bottom: 80px;
+    }
+
 }
 
 /* Desktop ----------- */
@@ -123,6 +127,8 @@ main {
     .photobox {
         width: calc(25% - 20px);
     }
-
+    .lg-sub-html {
+        padding-bottom: 50px;
+    }
 
 }
